--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
   <body
     class="bg-gradient-to-r from-gray-200 via-gray-200 to-gray-400 w-full h-full"
   >
-    <p class="text-center text-[40px] font-semibold mb-[20px] mt-[50px]">
+    <p class="text-center text-[45px] font-semibold mb-[20px] mt-[50px]">
       Review Our Cars!
     </p>
     <div
       id="cardsContainer"
-      class="w-[1200px] mx-auto flex items-center space-x-10"
+      class="w-[1000px] mx-auto flex items-center space-x-10"
     ></div>
+    <div id="modal" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center">
+        <div id="modalContent" class="bg-white rounded p-4">
+          <!-- Modal content will be inserted here -->
+        </div>
+      </div>
     <div class="flex space-x-[10px] items-center justify-center mt-4">
       <div
         id="prevButton"
